# raytracer

./: CMakeLists.txt
ext/: CMakeLists.txt
ext/ImGui-lib/: CMakeLists.txt
ext/SDL2-lib/: CMakeLists.txt
ext/SDL2-lib/SDL-2-2.30.5/: .gitignore  CMakeLists.txt
ext/SDL2-lib/SDL-2-2.30.5/src/core/winrt/: SDL_winrtapp_direct3d.h  SDL_winrtapp_xaml.cpp
ext/SDL2-lib/SDL-2-2.30.5/src/main/ngage/: SDL_ngage_main.cpp
ext/SDL2-lib/SDL-2-2.30.5/src/thread/stdcpp/: SDL_sysmutex.cpp
include/: CMakeLists.txt
include/app/: app.h
include/image/: image.h
include/raytracer/: camera.h  image.h  raytracer.h  viewport.h
include/shapes/: hittable.h  hittable_list.h  sphere.h
include/utilities/: helper.h  interval.h  ray.h  vec3.h
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h
src/material/: material.cpp  material.h
src/raytracer/: camera.cpp  camera.h  image.cpp  image.h  raytracer.cpp  raytracer.h  viewport.cpp  viewport.h
src/shapes/: bvh.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  sphere.cpp  sphere.h
src/utilities/: aabb.h  interval.h  ray.h  timer.h  utils.h  vec3.h
